--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
   <!-- Link đến file CSS riêng -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./static/style.css" />
 </head>
 <body>
 <div class="main-wrapper">
@@ -44,6 +44,6 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Link đến file JS riêng -->
-<script src="script.js"></script>
+<script src="./static/script.js"></script>
 </body>
 </html>
